# rust-web-server-yew

./: .env  Cargo.toml  README.md  Trunk.toml  index.html  index.scss
examples/: Cargo.toml  README.md  index.scss
examples/mock/: list.json  site.json
examples/src/: app.rs  main.rs
examples/src/api/: auth.rs  list.rs  menu.rs  mod.rs  request.rs  site.rs
examples/src/hooks/: use_user_context.rs
examples/src/pages/: button_page.rs  calendar_page.rs  card_list.rs  chart_page.rs  checkbox_page.rs  delete_page.rs  example.rs  filters_page.rs  form_page.rs  home.rs  icon_page.rs  image_page.rs  input_page.rs  loading_page.rs  markdown_page.rs  menu.rs  mod.rs  modal_page.rs  notification_page.rs  radio_page.rs  search_page.rs  section_page.rs  select_page.rs  signin.rs  signup.rs  table_page.rs  table_tree_page.rs  tag_page.rs  textarea_page.rs  user_context_provider.rs
examples/src/types/: mod.rs
javascript/: bulma-calendar.js  mychart.js
mock/: auth.json  list.json  menu.json
src/: app.rs  error.rs  lib.rs  main.rs
src/api/: auth.rs  list.rs  mod.rs  request.rs
src/bridge/: loading_agent.rs  mod.rs  notification_agent.rs
src/components/: breadcrumb.rs  button.rs  calendar.rs  card.rs  chart.rs  checkbox.rs  delete.rs  filter.rs  footer.rs  hero.rs  icon.rs  image.rs  input.rs  loading.rs  markdown.rs  media_object.rs  menu.rs  mod.rs  modal.rs  navbar.rs  notification.rs  notifications.rs  pagination.rs  radio.rs  section.rs  select.rs  table.rs  tabs.rs  tag.rs  textarea.rs  user_context_provider.rs
src/hooks/: use_user_context.rs
src/pages/: button_page.rs  calendar_page.rs  card_list.rs  chart_page.rs  checkbox_page.rs  delete_page.rs  documentation.rs  example.rs  filters_page.rs  form_page.rs  icon_page.rs  image_page.rs  input_page.rs  loading_page.rs  markdown_page.rs  mod.rs  modal_page.rs  notification_page.rs  radio_page.rs  search_page.rs  section_page.rs  select_page.rs  signin.rs  signup.rs  table_page.rs  table_tree_page.rs  tag_page.rs  textarea_page.rs
src/pages/general/: dashboard.rs
src/types/: auth.rs  list.rs  menu.rs  mod.rs  site.rs
