[package]
name = "rust-web-server-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["mock"]
mock = []

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1"
yew-agent = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
serde_json = "1.0"
serde = "1.0"
gloo = "0.8"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "NodeList",
    "HtmlCollection",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
] }
js-sys = "0.3"
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
dotenv_codegen = "0.15"
linked-hash-map = "0.5"
pulldown-cmark = "0.9"
multimap = "0.8"

random-number = "0.1.7"
getrandom = { version = "0.2.6", features = ["js"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
