[package]
name = "rust-web-server-yew"
version = "0.1.0"
authors = ["Simon Osaka <geniusmickymouse@qq.com>"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
# default = ["mock"]
mock = []

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1"
yew-agent = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
serde = "1.0"
gloo = "0.8"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "NodeList",
    "HtmlCollection",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
] }
pulldown-cmark = "0.9"
uuid = { version = "1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
dotenv_codegen = "0.15"
once_cell = "1"
parking_lot = "0.12"

[workspace]
members = ["examples"]
