[package]
name = "rust-web-server-yew-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
yew-hooks = "0.1"
yew-agent = "0.1"
wasm-bindgen-futures = "0.4"
wee_alloc = "0.4"
serde_json = "1.0"
serde = "1.0"
gloo = "0.8"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "NodeList",
    "HtmlCollection",
    "EventTarget",
    "HtmlButtonElement",
    "HtmlSelectElement",
    "HtmlTextAreaElement",
] }
js-sys = "0.3"
linked-hash-map = "0.5"
pulldown-cmark = "0.9"
random-number = "0.1.7"
include_dir = "0.7"
getrandom = { version = "0.2.6", features = ["js"] }
rust-web-server-yew = { path = "../", features = ["mock"] }
